--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
 							<input class="price__right-input input" name="phone" type="text" placeholder="+7 (___) ___-__-__" required>
 							<div class="price__wrapper-button-container input-button-container">
 								<button class="price__link btn btn_blue" type="submit">Получить расчет</button>
-								<div class="price__btn-description input-description">Нажимая "заказать аудит", я даю согласие на
+								<div class="price__btn-description input-description">Нажимая "получить расчет", я даю согласие на
 									<span class="price__btn-description_underlined input-description-underlined">
 										обработку персональных данных
 									</span>
